# wifiqr

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: build-packages.yml
src/wifiqr/: app.py  constants.py
src/wifiqr/resources/: style.qss
src/wifiqr/services/: export_service.py  macos_profile.py  qr_service.py  wifi_payload.py  wifi_profiles.py  windows_script.py  xml_utils.py
src/wifiqr/ui/: main_window.py
tests/: test_additional_coverage.py  test_app_entry.py  test_app_ui_flow.py  test_payload.py  test_preview_updates.py  test_qr_service.py  test_registry.py  test_services.py  test_table_save_batch.py  test_ui.py
